--- a/index.html
+++ b/index.html
@@ -10,14 +10,55 @@
     
     <!-- FONTS -->
 
+    <!-- CDN ICON -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Bootstrap Template</title>
+    <title>Bootstrap Dashbord</title>
 </head>
-<body>
+<body class="debug">
+
+    <header>
+        <div class="container">
+            <nav class="fixed-top">
+                <div class="row align-items-center mx-0 py-2">
+                    <div class="col-auto">
+                        <img src="img/mobile-logo.png" alt="logo-mobile" id="logo-mobile" class="d-lg-none align-middle">
+                        <img src="img/logo.svg" alt="logo" id="logo" class="d-none d-lg-block ">
+                    </div>
+                    <div class="col py-2">
+                        <input class="form-control me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                    </div>
+                    <div class="col-auto">
+
+                        <a href="#" class="d-none d-lg-inline-block p-1 align-middle text-secondary-emphasis"><i class="bi bi-list "></i></a>
+                        <a href="#" class="d-none d-lg-inline-block p-1 align-middle text-secondary-emphasis"><i class="bi bi-question-circle-fill"></i></a>
+                        <a href="#" class="d-none d-lg-inline-block p-1 align-middle text-secondary-emphasis"><i class="bi bi-three-dots-vertical"></i></a>
+
+                        <div class="dropdown d-lg-inline-block ">
+                            <button class="btn btn-link p-1  align-middle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a href="#" class="dropdown text-warning"><i class="bi bi-bell-fill"></i></a>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+
     
+<!-- BOOTSTRAP -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
