--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body class="debug">
 
     <header>
-        <div class="container">
-            <nav class="fixed-top">
-                <div class="row align-items-center mx-0 py-2">
+        
+            <nav class="stiky-top">
+                <div class="row align-items-center mx-0 px-0 py-2">
                     <div class="col-auto">
                         <img src="img/mobile-logo.png" alt="logo-mobile" id="logo-mobile" class="d-lg-none align-middle">
                         <img src="img/logo.svg" alt="logo" id="logo" class="d-none d-lg-block ">
@@ -53,8 +53,52 @@
                     </div>
                 </div>
             </nav>
-        </div>
+
     </header>
+
+    <main>
+        <div class="row mx-0">
+            <div class="col-auto aside">
+                <div>
+                    <nav>
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Stats</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Signal</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="text-center">
+                    <a href="#" >Adnmin</a>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row main-header">
+                    <div class="col-12 col-md-4 col-lg-6 order-2 order-md-1">
+                        <div>sopra sinistra</div>
+                        <div>sotto</div>
+                    </div>
+
+                    <div class="col-12 col-md-4 col-lg-3 order-2 order-md-1">
+                        <div>sopra centro</div>
+                        <div>sotto</div>
+                    </div>
+
+                    <div class="col-12 col-md-4 col-lg-3 order-1 order-md-3">
+                        <div>Nuovo Studente +</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     
