--- a/index.html
+++ b/index.html
@@ -121,12 +121,79 @@
                                     <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
+
                                 <div class="offcanvas-body">
                                     <form action="index.html">
 
+                                        <div class="mb-3">
+                                            <label for="Nome" name="Nome" class="form-label">Nome</label>
+                                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                                        </div>
 
+                                        <div class="mb-3">
+                                            <label for="Cognome" name="Cognome" class="form-label">Cognome</label>
+                                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                                        </div>
 
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon1">@</span>
+                                            <input type="email" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                        </div>
 
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon1">@</span>
+                                            <input type="email" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Cognome" name="Cognome" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="exampleFormControlInput1">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Cognome" name="Cognome" class="form-label">Conferma Password</label>
+                                            <input type="password" class="form-control" id="exampleFormControlInput1">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Nome" name="Nome" class="form-label">Indirizzo</label>
+                                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Nome" name="Nome" class="form-label">Città</label>
+                                            <input type="text" class="form-control" id="exampleFormControlInput1">
+                                        </div>
+
+                                        <div>
+                                            <label for="Nome" name="Nome" class="form-label">Stato</label>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>Scegli Stato</option>
+                                                <option value="1">One</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="Nome" name="Nome" class="form-label">Cap</label>
+                                            <input type="number" class="form-control" id="exampleFormControlInput1">
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <label for="formFile" class="form-label">Foto</label>
+                                            <input class="form-control" type="file" id="formFile">
+                                        </div>
+
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                                Seleziona per proseguire
+                                            </label>
+                                        </div>
+
+                                        <button class="btn btn-primary" type="submit">Salva</button>
+                                        <button class="btn btn-primary" type="reset">Svuota</button>
 
                                     </form>
                                 </div>
