--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item mt-2"><a href="#" class="text-white text-decoration-none rounded-text">3 App</a></li>
                                         
-                                        <li class="breadcrumb-item d-lg-none mt-2" aria-current="page"><a href="#" class="text-decoration-none text-white rounded-text">+</a></li>
+                                        <li class="breadcrumb-item d-lg-none mt-2" aria-current="page"><a href="#" class="text-decoration-none text-white rounded-text"><i class="fa-solid fa-plus"></i></a></li>
 
                                         <li class="breadcrumb-item d-none d-lg-inline-block mt-2" aria-current="page"><a href="#" class="text-decoration-none text-white rounded-text">Boolean Mobile App</a></li>
 
@@ -328,8 +328,8 @@
                                         <thead>
                                             <tr>
                                                 <td>Nome</td>
-                                                <td class="text-center">Data inizio</td>
-                                                <td class="text-center">Roi</td>
+                                                <td class="text-center t-none">Data inizio</td>
+                                                <td class="text-center t-none">Roi</td>
                                                 <td class="text-center">Stato</td>
                                                 <td class="text-center">Azioni</td>
                                             </tr>
@@ -338,10 +338,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #94</span>
+                                                    <span class="ps-2">Classe 94</span>
                                                 </td>
-                                                <td class="text-center">26 Gennaio 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">26 Gen 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-success p-0 px-1 text-white">Done</button>
                                                 </td>
@@ -357,10 +357,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #95</span>
+                                                    <span class="ps-2">Classe 95</span>
                                                 </td>
-                                                <td class="text-center">12 Febbraio 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">12 Feb 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-success p-0 px-1 text-white">Done</button>
                                                 </td>
@@ -376,10 +376,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #96</span>
+                                                    <span class="ps-2">Classe 96</span>
                                                 </td>
-                                                <td class="text-center">26 Febbraio 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">26 Feb 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-danger p-0 px-1 text-white">Failed</button>
                                                 </td>
@@ -395,10 +395,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #97</span>
+                                                    <span class="ps-2">Classe 97</span>
                                                 </td>
-                                                <td class="text-center">4 Marzo 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">4 Mar 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-success p-0 px-1 text-white">Done</button>
                                                 </td>
@@ -414,10 +414,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #98</span>
+                                                    <span class="ps-2">Classe 98</span>
                                                 </td>
-                                                <td class="text-center">18 Marzo 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">18 Mar 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-danger p-0 px-1 text-white">Failed</button>
                                                 </td>
@@ -433,10 +433,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #99</span>
+                                                    <span class="ps-2">Classe 99</span>
                                                 </td>
-                                                <td class="text-center">27 Marzo 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">27 Mar 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-success p-0 px-1 text-white">Done</button>
                                                 </td>
@@ -452,10 +452,10 @@
                                             <tr>
                                                 <td>
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #100</span>
+                                                    <span class="ps-2">Classe 100</span>
                                                 </td>
-                                                <td class="text-center">12 Aprile 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">12 Apr 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-warning p-0 px-1 text-white">Process</button>
                                                 </td>
@@ -471,10 +471,10 @@
                                             <tr>
                                                 <td class="first-table-column">
                                                     <img src="img/class-avatar.jpg" alt="class-avatar" id="class">
-                                                    <span class="ps-2">Classe #101</span>
+                                                    <span class="ps-2">Classe 101</span>
                                                 </td>
-                                                <td class="text-center">26 Aprile 2023</td>
-                                                <td class="text-center">20%</td>
+                                                <td class="text-center t-none">26 Apr 2023</td>
+                                                <td class="text-center t-none">20%</td>
                                                 <td class="text-center">
                                                     <button type="button" class="btn bg-warning p-0 px-1 text-white">Process</button>
                                                 </td>
